Colaboratory を使用して作成しました

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOBX1DgKKTOz8//OOfSheB6",
+      "authorship_tag": "ABX9TyPwYxA3IDUaQu1Dxmv/iTSA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -238,7 +238,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uZAwk2CwlJVw",
-        "outputId": "6d6fe24b-142d-4c6a-f5ae-a013f6d32938"
+        "outputId": "0393e558-130a-4a75-bfaa-e581360aa015"
       },
       "source": [
         "#本線\n",
@@ -271,7 +271,7 @@
         "#cell_list = worksheet.range(\"A3:A3865\")\n",
         "drive.mount('/content/drive')\n",
         "cell_list = []\n",
-        "for cell in worksheet.range(\"A3:A200\"):\n",
+        "for cell in worksheet.range(\"A3:A3\"):\n",
         "#for cell in worksheet.range(\"A1001:A1200\"):\n",
         "#for cell in worksheet.range(\"A2001:A2200\"):\n",
         "#for cell in worksheet.range(\"A3001:A3200\"):\n",
@@ -344,6 +344,11 @@
         "      for j in range(roopCnt):\n",
         "         fadasi = fadasiBaseCnt-j\n",
         "         dataDict = {}\n",
+        "         dataDict['tradingName'] =  cell_list[i]\n",
+        "         if j == 0:\n",
+        "           dataDict['filtFlg'] = 1\n",
+        "         else:\n",
+        "           dataDict['filtFlg'] = 0\n",
         "         dataDict['endDate'] = fCFS[j]['endDate']['fmt'] if 'endDate' in fCFS[j].keys() else ''\n",
         "         dataDict['netIncome'] = fCFS[j]['netIncome']['longFmt'] if 'netIncome' in fCFS[j].keys() else ''\n",
         "         dataDict['totalRevenue'] = fISH[j]['totalRevenue']['longFmt'] if 'totalRevenue' in fISH[j].keys() else ''\n",
@@ -373,13 +378,13 @@
         "         else:\n",
         "           dataDict['ocf'] = dataDict['cfps'] / dataDict['sps']\n",
         "\n",
-        "         #営業キャッシュ・フローが15%より大きいか\n",
+        "         #営業キャッシュ・フローマージンが15%より大きいか\n",
         "         if dataDict['ocf'] > 0.15:\n",
         "           dataDict['ocfFlg'] = \"true\"\n",
         "         else:\n",
         "           dataDict['ocfFlg'] = \"false\"\n",
         "\n",
-        "         #営業キャッシュ・フローがEPSより大きいか\n",
+        "         #cfpsがEPSより大きいか\n",
         "         if dataDict['cfps'] > dataDict['eps']:\n",
         "           dataDict['cfpsMoreThanEpsFlg'] = \"true\"\n",
         "         else:\n",
@@ -389,14 +394,14 @@
         "         if j == 0:\n",
         "           dataDict['ybyyUpFlg'] = \"unKnown\"\n",
         "         elif j == 1:\n",
-        "           if parentDataDict[0]['ocf'] > dataDict['ocf']:\n",
+        "           if parentDataDict[0]['cfps'] > dataDict['cfps']:\n",
         "             parentDataDict[0]['ybyyUpFlg'] = \"true\"\n",
         "             dataDict['ybyyUpFlg'] = \"true\"\n",
         "           else:\n",
         "             parentDataDict[0]['ybyyUpFlg'] = \"false\"\n",
         "             dataDict['ybyyUpFlg'] = \"false\"\n",
         "         elif j == 2:\n",
-        "           if parentDataDict[0]['ocf'] > parentDataDict[1]['ocf'] and parentDataDict[1]['ocf'] > dataDict['ocf']:\n",
+        "           if parentDataDict[0]['cfps'] > parentDataDict[1]['cfps'] and parentDataDict[1]['cfps'] > dataDict['cfps']:\n",
         "             parentDataDict[0]['ybyyUpFlg'] = \"true\"\n",
         "             parentDataDict[1]['ybyyUpFlg'] = \"true\"\n",
         "             dataDict['ybyyUpFlg'] = \"true\"\n",
@@ -407,7 +412,7 @@
         "        \n",
         "         parentDataDict.append(dataDict)\n",
         "         #追加ここまで----\n",
-        "\n",
+        "         print(dataDict)\n",
         "         key = cell_list[i] + '_' + dataDict['endDate']\n",
         "         self.outPutDict[key] = dataDict\n",
         "    except:\n",
@@ -438,38 +443,25 @@
         "    kx = 1\n",
         "    row = []\n",
         "    for k,v in d.items():\n",
-        "      if kx == 1:\n",
-        "        row.append(symbl)\n",
-        "      else:\n",
-        "        row.append(v)\n",
+        "      #if kx == 1:\n",
+        "      #  row.append(symbl)\n",
+        "      #else:\n",
+        "      #  row.append(v)\n",
+        "      row.append(v)\n",
         "      kx += 1\n",
         "    w.writerow(row)\n",
         "    ky += 1\n"
       ],
-      "execution_count": 39,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
             "end:https://finance.yahoo.com/quote/A/financials?p=A\n",
-            "end:https://finance.yahoo.com/quote/AA/financials?p=AA\n",
-            "end:https://finance.yahoo.com/quote/AAL/financials?p=AAL\n",
-            "end:https://finance.yahoo.com/quote/AAN/financials?p=AAN\n",
-            "end:https://finance.yahoo.com/quote/AAOI/financials?p=AAOI\n",
-            "end:https://finance.yahoo.com/quote/AAON/financials?p=AAON\n",
-            "end:https://finance.yahoo.com/quote/AAP/financials?p=AAP\n",
-            "end:https://finance.yahoo.com/quote/AAPL/financials?p=AAPL\n",
-            "end:https://finance.yahoo.com/quote/AAU/financials?p=AAU\n",
-            "end:https://finance.yahoo.com/quote/AAWW/financials?p=AAWW\n",
-            "end:https://finance.yahoo.com/quote/AAXN/financials?p=AAXN\n",
-            "end:https://finance.yahoo.com/quote/ABBV/financials?p=ABBV\n",
-            "end:https://finance.yahoo.com/quote/ABC/financials?p=ABC\n",
-            "end:https://finance.yahoo.com/quote/ABCB/financials?p=ABCB\n",
-            "end:https://finance.yahoo.com/quote/ABEO/financials?p=ABEO\n",
-            "end:https://finance.yahoo.com/quote/ABG/financials?p=ABG\n",
-            "end:https://finance.yahoo.com/quote/ABM/financials?p=ABM\n",
-            "end:https://finance.yahoo.com/quote/ABMD/financials?p=ABMD\n"
+            "{'tradingName': 'A', 'filtFlg': 1, 'endDate': '2020-10-31', 'netIncome': '719000000', 'totalRevenue': '5339000000', 'reportedValue': 318000000, 'totalCashFromOperatingActivities': '921000000', 'dividendsPaid': '222000000', 'dps': 0.6981132075471698, 'eps': 2.261006289308176, 'cfps': 2.8962264150943398, 'sps': 16.78930817610063, 'ocf': 0.17250421427233564, 'ocfFlg': 'true', 'cfpsMoreThanEpsFlg': 'true', 'ybyyUpFlg': 'unKnown'}\n",
+            "{'tradingName': 'A', 'filtFlg': 0, 'endDate': '2019-10-31', 'netIncome': '1071000000', 'totalRevenue': '5163000000', 'reportedValue': 325000000, 'totalCashFromOperatingActivities': '1021000000', 'dividendsPaid': '206000000', 'dps': 0.6338461538461538, 'eps': 3.2953846153846156, 'cfps': 3.1415384615384614, 'sps': 15.886153846153846, 'ocf': 0.1977532442378462, 'ocfFlg': 'true', 'cfpsMoreThanEpsFlg': 'false', 'ybyyUpFlg': 'false'}\n",
+            "{'tradingName': 'A', 'filtFlg': 0, 'endDate': '2018-10-31', 'netIncome': '316000000', 'totalRevenue': '4914000000', 'reportedValue': 326000000, 'totalCashFromOperatingActivities': '1087000000', 'dividendsPaid': '191000000', 'dps': 0.5858895705521472, 'eps': 0.9693251533742331, 'cfps': 3.334355828220859, 'sps': 15.07361963190184, 'ocf': 0.2212047212047212, 'ocfFlg': 'true', 'cfpsMoreThanEpsFlg': 'true', 'ybyyUpFlg': 'false'}\n"
           ],
           "name": "stdout"
         }
